--- a/project_1/assets/sass/pages/_home.scss
+++ b/project_1/assets/sass/pages/_home.scss
@@ -6,55 +6,327 @@
     align-items: center;
     justify-content: center;
     padding: 165px 0;
-    z-index: 1;
+    z-index: 10;
     position: relative;
-    
+    @include mobile {
+        padding: 50px 0;
+    }
     .slogen--text {
         font-size: 18px;
-        width: 30%;
+        width: 70%;
         text-align: center;
+        line-height: 40px;
+        margin: auto;
+        @include mobile {
+            width: 100%;
+            font-size: 16px;
+            line-height: 32px;
+        }
+        span {
+            &:first-child {
+                font-size: 28px;
+            }
+            &:last-child {
+                font-size: 25px;
+            }
+        }
     }
 }
 
 .home__subsview {    
     background: url('../images/im_bg_subsview.png') no-repeat top center;
     position: relative;
-    z-index: 1;
+    z-index: 9;
+    padding: 150px 0;
+    margin-top: -90px;
     .subsview__block {
         display: flex;
         align-items: flex-end;
         justify-content: center;
         flex-wrap: wrap;
+        margin-top: -190px;
+        @include mobile {
+            display: block;
+        }
         .subsview__info {
             width: 50%;
             padding: 25px 40px;
+            @include mobile {
+                width: 100%;
+            }
             a {
                 display: inline-block;
             }
             &:nth-child(odd) {
                 text-align: right;
             }
+            @include mobile {
+                img {
+                    width: 100%;
+                }
+            }
         }
     }
     .subsview__slide {
         padding: 0 30px;
+        margin-top: 60px;
     }
 }
 
 .home__meet {
-    background: url('../images/im_bg_meet.png') no-repeat 24% 0;
+    background: url(../images/im_bg_meet.png) no-repeat 25% center;
+    position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 165px 0;
-    z-index: 1;
+    padding: 220px 0;
+    margin-top: -112px;
+    z-index: 9;
+    @include mobile {
+        height: 400px;
+    }
+    .meet__text {
+        font-size: 55px;
+        text-transform: uppercase;
+        color: $c-violet;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 16px;
+        @include mobile {
+            font-size: 32px;
+        }
+    }
+}
+
+.home__diaries {
+    background: url(../images/im_bg_diaries.png) no-repeat 25% 30%;
     position: relative;
-    // .meet__text {
-    //     text-transform: uppercase;
-    //     text-align: center;
-    //     font-weight: bold;
-    //     color: $c-violet;
-    //     margin-bottom: 24px;
-    //     font-size: 55px;
-    // }
+    padding: 80px 0 300px 0;
+    z-index: 9;
+    margin-top: -50px;
+    .diaries__title {
+        font-size: 55px;
+        line-height: 70px;
+        font-weight: bold;
+        text-transform: uppercase;
+        text-align: center;
+        color: $c-white;
+        margin-bottom: 64px;
+        @include mobile {
+            font-size: 32px;
+        }
+    }
+    .diaries__wrap {
+        .diaries__item {
+            .diaries__img {
+                img {
+                    border-radius: 16px 16px 0 0;
+                }
+            }
+            .diaries__info {
+                background: $c-yellow;
+                padding: 24px;
+                border-radius: 0 0 16px 16px;
+                .diaries__info__date {
+                    display: flex;
+                    align-items: center;
+                    img {
+                        width: unset;
+                        margin-right: 8px;
+                    }
+                }
+                .diaries__info__title {
+                    font-size: 22px;
+                    font-weight: bold;
+                    color: $c-violet;
+                    text-transform: uppercase;
+                    line-height: 28px;
+                    margin-top: 16px;
+                    margin-bottom: 24px;
+                    @include display-limit-2(2);
+                }
+                .diaries__info__des {
+                    font-size: 16px;
+                    font-weight: 500;
+                    line-height: 22px;
+                    @include display-limit-2(4);
+                }
+            }
+        }
+        .owl-prev {
+            position: relative;
+            width: 60px;
+            height: 60px;
+            &::before {
+                position: absolute;
+                content: "";
+                background: url(../images/im_arrow_l.png) no-repeat center center;
+                width: 100%;
+                height: 100%;
+                left: 0;
+                top: 0;
+            }
+        }
+        .owl-next {
+            position: relative;
+            width: 60px;
+            height: 60px;
+            &::before {
+                position: absolute;
+                content: "";
+                background: url(../images/im_arrow_r.png) no-repeat center center;
+                width: 100%;
+                height: 100%;
+                left: 0;
+                top: 0;
+            }
+        }
+        .owl-theme .owl-nav {
+            margin-top: 48px;
+        }
+        .owl-theme .owl-nav [class*=owl-]:hover {
+            background: transparent;
+        }
+    }
+}
+
+.home__partnership {
+    background: url(../images/im_bg_partnership1.png) no-repeat 50% 0;
+    position: relative;
+    margin-top: -15%;
+    z-index: 9;
+    padding: 270px 0;
+    .partnership__title {
+        font-size: 55px;
+        line-height: 70px;
+        color: $c-white;
+        text-align: center;
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-bottom: 32px;
+        @include mobile {
+            font-size: 32px;
+            margin-bottom: 24px;
+        }
+    }
+    .partnership__des {
+        margin-bottom: 0;
+        line-height: 40px;
+        color: $c-white;
+        text-align: center;
+        width: 60%;
+        margin: auto;
+        @include mobile {
+            width: 100%;
+        }
+        span {
+            &:first-child {
+                font-size: 28px;
+                font-weight: bold;
+                @include mobile {
+                    font-size: 18px;
+                }
+            }
+            &:last-child {
+                font-size: 25px;
+                @include mobile {
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+    .partnership__form {
+        margin-top: 64px;
+        @include mobile {
+            margin-top: 32px;
+        }
+        .form__wrap {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 42px;
+            .form-group {
+                position: relative;
+                .form--style {
+                    border: none;
+                    position: absolute;
+                    width: 90%;
+                    height: 90%;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%);
+                    padding: 8px 0;
+                }
+                textarea {
+                    resize: none;
+                }
+                @include mobile {
+                    img {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+        .partnership__btn {
+            position: relative;
+            border: none;
+            z-index: 1;
+            &::before {
+                position: absolute;
+                content: '';
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: url('../images/im_btn.png') no-repeat center;
+                z-index: -1;
+            }
+        }
+        .partnership--style {
+            font-size: 22px;
+            font-weight: bold;
+            text-transform: uppercase;
+            color: $c-white;
+        }
+    }
+}
+
+.wolfoo__footer {
+    background: url('../images/im_bg_footer.png') no-repeat center;
+    position: relative;
+    .footer__info {
+        .footer--list {
+            ul {
+                margin: 0;
+                padding: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                li {
+                    list-style: none;
+                    a {
+                        font-size: 22px;
+                        line-height: 27px;
+                        font-weight: bold;
+                        text-transform: uppercase;
+                        padding: 0 16px;
+                        color: $c-white;
+                    }
+                }
+            }
+        }
+        .footer__social {
+            margin: 32px 0;
+        }
+        .footer__copyr {
+            color: $c-white;
+            margin-bottom: 0;
+            text-align: center;
+            font-size: 18px;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+    }
 }
