--- a/project_1/assets/sass/pages/_home.scss
+++ b/project_1/assets/sass/pages/_home.scss
@@ -1,15 +1,32 @@
 
+.wolfoo__home {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.wolfoo__layer1 {
+    @extend .wolfoo__home;
+}
+
+.wolfoo__layer2 {
+    @extend .wolfoo__home;
+}
+.wolfoo__layer3 {
+    @extend .wolfoo__home;
+}
+.wolfoo__layer4 {
+    @extend .wolfoo__home;
+}
 .home__slogen {
-    background: url('../images/im_bg_slogen.png') no-repeat bottom left;
-    // background-size: cover;
+    background: url(../images/im_bg_slogen.png) no-repeat bottom left;
+    height: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 165px 0;
-    z-index: 10;
-    position: relative;
+    z-index: 2;
     @include mobile {
         padding: 50px 0;
+        background-position: bottom center;
     }
     .slogen--text {
         font-size: 18px;
@@ -17,6 +34,7 @@
         text-align: center;
         line-height: 40px;
         margin: auto;
+        margin-bottom: 10%;
         @include mobile {
             width: 100%;
             font-size: 16px;
@@ -34,57 +52,80 @@
 }
 
 .home__subsview {    
-    background: url('../images/im_bg_subsview.png') no-repeat top center;
-    position: relative;
-    z-index: 9;
-    padding: 150px 0;
-    margin-top: -90px;
-    .subsview__block {
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin-top: -190px;
+    background: url(../images/im_bg_subsview.png) no-repeat 35% 25%;
+    height: 1010px;
+    margin-top: -5%;
+    z-index: 1;
+    @include mobile {
+        margin-top: -15%;
+        height: 1120px;
+    }
+}
+.subsview__block {
+    position: absolute;
+    top: 17%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    justify-content: center;
+    @include mobile {
+        display: block;
+        top: 28%;
+        width: 60%;
+    }
+    .subsview__info {
+        width: 50%;
+        padding: 25px 40px;
         @include mobile {
-            display: block;
+            width: 100%;
+            padding: 16px 0;
+            display: inline-block;
         }
-        .subsview__info {
-            width: 50%;
-            padding: 25px 40px;
-            @include mobile {
+        a {
+            display: inline-block;
+        }
+        &:nth-child(odd) {
+            text-align: right;
+        }
+        @include mobile {
+            img {
                 width: 100%;
-            }
-            a {
-                display: inline-block;
-            }
-            &:nth-child(odd) {
-                text-align: right;
-            }
-            @include mobile {
-                img {
-                    width: 100%;
-                }
             }
         }
     }
-    .subsview__slide {
-        padding: 0 30px;
-        margin-top: 60px;
+}
+.subsview__slide {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 15%;
+    padding: 0 30px;
+    @include mobile {
+        bottom: 6%;
     }
 }
 
 .home__meet {
-    background: url(../images/im_bg_meet.png) no-repeat 25% center;
+    background: url(../images/im_bg_meet.png) no-repeat 25% 32%;
     position: relative;
+    margin-top: -9%;
+    z-index: 2;
+    height: 695px;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 220px 0;
-    margin-top: -112px;
-    z-index: 9;
     @include mobile {
         height: 400px;
+        margin-top: -13%;
+    }
+    .home__meet__info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .meet__text {
         font-size: 55px;
@@ -100,11 +141,20 @@
 }
 
 .home__diaries {
-    background: url(../images/im_bg_diaries.png) no-repeat 25% 30%;
+    background: url(../images/im_bg_diaries.png) 25% 23% no-repeat;
     position: relative;
-    padding: 80px 0 300px 0;
-    z-index: 9;
-    margin-top: -50px;
+    height: 1120px;
+    z-index: 2;
+    margin-top: -6%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @include mobile {
+        height: auto;
+        background-position: 20% 40%;
+        margin-top: 0;
+        padding: 40px 0 100px 0;
+    }
     .diaries__title {
         font-size: 55px;
         line-height: 70px;
@@ -113,6 +163,9 @@
         text-align: center;
         color: $c-white;
         margin-bottom: 64px;
+        @include mobile {
+            margin-bottom: 32px;
+        }
         @include mobile {
             font-size: 32px;
         }
@@ -192,11 +245,20 @@
 }
 
 .home__partnership {
-    background: url(../images/im_bg_partnership1.png) no-repeat 50% 0;
+    background: url(../images/im_bg_partnership1.png) no-repeat 50% 0%;
     position: relative;
+    z-index: 2;
+    height: 1280px;
     margin-top: -15%;
-    z-index: 9;
-    padding: 270px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 12%;
+    @include mobile {
+        height: 650px;
+        padding-bottom: 0;
+        background-position: 32% 13%;
+    }
     .partnership__title {
         font-size: 55px;
         line-height: 70px;
@@ -245,7 +307,7 @@
             display: flex;
             flex-wrap: wrap;
             align-items: center;
-            justify-content: space-between;
+            justify-content: space-around;
             margin-bottom: 42px;
             .form-group {
                 position: relative;
@@ -294,8 +356,22 @@
 }
 
 .wolfoo__footer {
-    background: url('../images/im_bg_footer.png') no-repeat center;
+    background: url(../images/im_bg_footer.png) no-repeat 42% 38%;
     position: relative;
+    height: 790px;
+    margin-top: -27%;
+    z-index: 2;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    padding-bottom: 2%;
+    @include mobile {
+        height: auto;
+        margin-top: 0;
+        padding-bottom: 0;
+        padding: 30px 0;
+        background-position: center;
+    }
     .footer__info {
         .footer--list {
             ul {
